--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "track-data",
+  "name": "track-prep",
   "description": "Data processing util for segment.",
-  "repository": "git://github.com/weo-edu/track-data.git",
+  "repository": "git://github.com/weo-edu/track-prep.git",
   "version": "0.1.0",
   "license": "MIT",
   "main": "lib/index.js",
