--- a/package.json
+++ b/package.json
@@ -6,16 +6,13 @@
   "license": "MIT",
   "main": "lib/index.js",
   "dependencies": {
+    "@micro-js/map-obj": "^1.1.2",
+    "@micro-js/pick": "^1.0.1",
     "@weo-edu/is": "^0.2.0",
-    "flat": "^1.6.0",
-    "lodash": "^3.10.1"
+    "flat": "^1.6.0"
   },
   "devDependencies": {
     "mocha": "2.x",
     "standard": "^4.0.0"
-  },
-  "engines": {
-    "node": "~0.10.38",
-    "npm": "~2.9.0"
   }
 }
